Add pipeline to lint,build and deploy the app

--- a/puhelinluettelo-backend/package.json
+++ b/puhelinluettelo-backend/package.json
@@ -6,10 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build:ui": "rm -rf dist && cd ~/Fullstack-Open-Course/Osa2/puhelinluettelo/ && npm run build && cp -r dist ~/Full-stack-Open-part3/puhelinluettelo-backend",
-    "deploy": "cd ~/Full-stack-Open-part3/puhelinluettelo-backend && fly deploy",
+    "build:ui": "rm -rf dist && cd ../puhelinluettelo-frontend && npm install && npm run build && cp -r dist ../puhelinluettelo-backend",
+    "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs",
+    "logs:prod": "render logs",
     "lint": "eslint ."
   },
   "author": "Boris Banchev",
